# cirrus

./: .gitignore  .gitmodules  Cargo.toml  Cross.toml  LICENSE.txt  README.md
app/src/lib/: Counter.svelte
assets/cmake/: aarch64-android-toolchain-linux.cmake  android-toolchain-linux.cmake  android-toolchain.cmake
cirrus-app/: README.md  framework7.json  package.json  svelte.config.js  tailwind.config.cjs  tsconfig.json  vite.config.js  workbox-config.js
cirrus-app-f7/: package-lock.json  package.json
cirrus-app-f7/src-tauri/: Cargo.toml  tauri.conf.json
cirrus-app-f7/src-tauri/src/: main.rs
cirrus-app-f7/src/components/: app.svelte
cirrus-app-f7/src/js/: routes.js
cirrus-app-f7/src/pages/: audio-list.svelte  home.svelte
cirrus-app/src/: App.svelte  index.html  main.ts  manifest.json  state.ts
cirrus-app/src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
cirrus-app/src-tauri/.cargo/: config.toml
cirrus-app/src-tauri/resources/configs/cirrus/: client.sample.toml
cirrus-app/src-tauri/src/: desktop.rs  lib.rs  main.rs  mobile.rs
cirrus-app/src/components/: app.svelte
cirrus-app/src/css/: app.less
cirrus-app/src/js/: command.js  routes.js  store.js
cirrus-app/src/lib/: AudioList.svelte  AudioPlayer.svelte  TestButton.svelte
cirrus-app/src/lib/components/titlebar/: TitleBar.svelte  index.ts
cirrus-app/src/lib/functions/: command.ts
cirrus-app/src/lib/types/: index.ts
cirrus-app/src/pages/: audio-list.svelte  home.svelte
cirrus-app/src/routes/: +layout.svelte  +page.svelte  +page.ts  Header.svelte
cirrus-app/src/types/: index.ts
cirrus-lib/: Cargo.toml
cirrus-lib/crates/client/: Cargo.toml
cirrus-lib/crates/client/src/: audio.rs  dto.rs  lib.rs  request.rs  state.rs
cirrus-lib/crates/client/src/audio_player/: mod.rs  player.rs  sample.rs
cirrus-lib/crates/grpc/: .gitignore  Cargo.toml  build.rs
cirrus-lib/crates/grpc/proto/: audio.proto  cirrus.proto
cirrus-lib/crates/grpc/proto/api/: audio.proto
cirrus-lib/crates/grpc/proto/common/: action.proto  list.proto
cirrus-lib/crates/grpc/src/: lib.rs
cirrus-lib/crates/server/: Cargo.toml
cirrus-lib/crates/server/src/: audio.rs  lib.rs  server.rs
cirrus-lib/crates/server/src/logic/: audio.rs  mod.rs
cirrus-lib/crates/server/src/model/: audio.rs  mod.rs
cirrus-lib/crates/server/src/model/document/: audio.rs
cirrus-lib/crates/server/src/service/: audio.rs
cirrus-lib/crates/server/src/util/: hash.rs  path.rs
cirrus-lib/crates/tauri-plugin/: Cargo.toml
cirrus-lib/crates/tauri-plugin/src/: lib.rs  state.rs
cirrus-lib/crates/tauri-plugin/src/commands/: audio.rs  mod.rs
cirrus-lib/src/: lib.rs
cirrus-lib/src/client/: audio.rs
cirrus-lib/src/tauri_plugin/: state.rs
cirrus-lib/src/tauri_plugin/commands/: audio.rs  mod.rs
cirrus-server/: .gitignore  Cargo.toml  Cross.toml  build.rs
cirrus-server/src/: main.rs  settings.rs
cirrus-server/src/logic/: audio.rs  library.rs  mod.rs  packet.rs  sample.rs  tag.rs
cirrus-server/src/logic/file/: mod.rs  packet.rs  sample.rs
cirrus-server/src/model/: audio.rs  mod.rs
cirrus-server/src/model/crud/: file.rs  library.rs  mod.rs  tag.rs
cirrus-server/src/model/document/: audio.rs  mod.rs  path.rs  time.rs
cirrus-server/src/model/dto/: audio.rs  mod.rs
cirrus-server/src/service/: audio.rs  data.rs  library.rs  mod.rs  tag.rs
cirrus-server/src/util/: path.rs
configs/cirrus/: server.sample.toml  server.toml
crates/cirrus-client-core/: Cargo.toml  build.rs
crates/cirrus-client-core/src/: dto.rs  lib.rs  request.rs  settings.rs  tls.rs
crates/cirrus-client-core/src/audio/: context.rs  decoder.rs  device.rs  mod.rs  packet.rs  player.rs  resampler.rs  sample.rs  stream.rs
crates/cirrus-client-core/src/audio_player/: mod.rs  packet.rs  player.rs  sample.rs  state.rs
crates/cirrus-protobuf/: Cargo.toml  build.rs
crates/cirrus-protobuf/src/: lib.rs
crates/cirrus-tauri-plugin/: Cargo.toml  build.rs
crates/cirrus-tauri-plugin/android/: build.gradle.kts
crates/cirrus-tauri-plugin/android/src/main/: AndroidManifest.xml
crates/cirrus-tauri-plugin/android/src/main/java/: CirrusNotification.kt  CirrusPlugin.kt  CirrusService.kt  Example.kt  ExamplePlugin.kt
crates/cirrus-tauri-plugin/src/: lib.rs  mobile.rs  models.rs  settings.rs  state.rs
crates/cirrus-tauri-plugin/src/commands/: audio.rs  mod.rs
crates/mobile-plugin/: Cargo.toml  build.rs
crates/mobile-plugin/android/: .gitignore  local.properties
crates/mobile-plugin/src/: desktop.rs  lib.rs  mobile.rs  models.rs
docker/: server-cross-aarch64.Dockerfile
lib/: Cargo.toml
lib/src/audio/: audio.rs
proto/: audio.proto  cirrus.proto
proto/api/: audio.proto
protobuf/api/: audio.proto
protobuf/common/: action.proto
scripts/: android-build-env-aarch64.ps1  android-build-env-aarch64.sh  android-build-env-x86_64.ps1  android-build-env-x86_64.sh  android-build-env.sh  ln-libcpp_shapred-aarch64.sh  ln-libcpp_shapred-x86_64.sh  ln-libcpp_shapred.sh  set-android-build-option.ps1
src/: audio.rs  client.rs  main.rs  server.rs
src-tauri/: tauri.conf.json
src.1/src/: client.rs
