[package]
name = "cirrus-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aiff = {git = "https://github.com/julientregoat/aiff-rs.git"}
anyhow = "1"
bytes = "1"
cpal = "0.13"
futures = "0.3"
tokio = { version = "1", features = ["full"] }
