[package]
name = "app"
version = "0.3.0"
description = "Cirrus client application"
authors = ["fibremint"]
license = "MIT"
repository = "https://github.com/fibremint/cirrus"
#default-run = "app"
edition = "2021"
rust-version = "1.64"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-alpha.2", features = ["codegen", "isolation"] }

[dependencies]
cirrus-tauri-plugin = { path = "../../crates/cirrus-tauri-plugin" }

serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tiny_http = "0.11"

tauri = { version = "2.0.0-alpha.4", features = ["api-all", "cli", "global-shortcut", "http-multipart", "icon-ico", "icon-png", "isolation", "macos-private-api", "system-tray", "windows7-compat"] }

[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
log = "0.4"

#mobile-plugin = { path ="../../crates/mobile-plugin" }

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.9.0"

[target.'cfg(target_os = "ios")'.dependencies]
env_logger = "0.9.0"

[target."cfg(target_os = \"windows\")".dependencies]
window-shadows= "0.2"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]

# default to small, optimized release binaries
[profile.release]
panic = "abort"
codegen-units = 1
lto = true
incremental = false
opt-level = "s"
