[package]
name = "app"
version = "0.4.0"
description = "A Tauri App"
authors = ["Dave Kim (fibremint)"]
license = "MIT"
repository = "https://github.com/fibremint/cirrus"
#default-run = "app"
edition = "2021"
rust-version = "1.59"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-alpha.4", features = ["codegen"] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio = "1"

[dependencies.cirrus-tauri-plugin]
path = "../../crates/cirrus-tauri-plugin"

[dependencies.tauri]
version = "2.0.0-alpha.8"
features = []

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
