[package]
name = "cirrus-client-core"
version = "0.2.0"
description = "Cirrus client core library"
authors = ["fibremint"]
license = "MIT"
repository = "https://github.com/fibremint/cirrus"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
#bytes = "1"
cirrus-protobuf = { path = "../cirrus-protobuf", features = ["client"] }
cpal = "0.14"
futures = "0.3"
tokio = { version = "1.0", features = ["rt-multi-thread", "time", "macros", "fs"] }
tokio-stream = "0.1.12"
tonic = { version = "0.8.3", features = ["default", "tls-roots"] }
serde = "1"
opus = "0.3.0"
audio = "0.2.0-alpha.4"
rand = "0.8.5"
rubato = "0.12.0"

#[build-dependencies]
#tonic-build = "0.6"