[package]
name = "cirrus-protobuf"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = { version = "0.6", features = ["codegen"] }
prost = "0.9"
serde = "1"

[build-dependencies]
anyhow = "1"
dunce = "1"
tonic-build = "0.6"

[features]
#default = ["server", "client"]
server = []
client = []