[package]
name = "cirrus-tauri-plugin"
version = "0.2.0"
description = "Cirrus client plugin for Tauri"
authors = ["fibremint"]
license = "MIT"
repository = "https://github.com/fibremint/cirrus"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
cirrus-client-core = { path = "../cirrus-client-core" }
cirrus-protobuf = { path = "../cirrus-protobuf" }
config = "0.13.1"
dunce = "1"
http = "0.2"
tauri = { version = "1.1.2", default-features = false, features = [] }
tokio = { version = "1.0", features = ["rt-multi-thread", "time", "macros", "fs"] }
serde = "1"
serde_derive = "1"