[package]
name = "cirrus-server-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aiff = {git = "https://github.com/julientregoat/aiff-rs.git"}
bson = { version = "2", features = ["chrono-0_4"] }
bytes = "1"
chrono = "0.4"
futures = "0.3"
#cirrus-grpc = { path = "../grpc", features = ["only-server"] }
cirrus-grpc = { path = "../grpc" }
http = "0.2"
mongodb = { version = "2", default-features = false, features = ["tokio-runtime"] }
serde = "1"
tonic = "0.6"
tokio = { version = "1", features = ["rt-multi-thread", "time", "macros", "fs"] }
prost = "0.9"

[build-dependencies]
tonic-build = "0.6"