[package]
name = "cirrus-tauri-plugin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cirrus-client-lib = { path = "../client" }
cirrus-grpc = { path = "../grpc" }
http = "0.2"
tauri = { version = "1.0.0-rc.4", default-features = false, features = [] }
# serde = "1"
